[gd_scene load_steps=26 format=3 uid="uid://bdnu8fnyer222"]

[ext_resource type="Script" uid="uid://7pclqypncw2c" path="res://scenes/node_main_script.gd" id="1_ta4a1"]
[ext_resource type="Shader" uid="uid://t84ols7oncvw" path="res://shaders/display_1_shader.gdshader" id="2_lbbxc"]
[ext_resource type="Shader" uid="uid://c8fqqtj2xywd2" path="res://shaders/test_shader_1.gdshader" id="2_ta4a1"]
[ext_resource type="Shader" uid="uid://d3lim0nvrajuh" path="res://shaders/display_2_shader.gdshader" id="3_cxnwi"]
[ext_resource type="Shader" uid="uid://mv78gxwyahhe" path="res://shaders/circle_sdf_shader.gdshader" id="4_u0iwh"]
[ext_resource type="Shader" uid="uid://buekpfuu244t1" path="res://shaders/grid_background_shader.gdshader" id="5_gqu34"]
[ext_resource type="Shader" uid="uid://dwepgphsroufn" path="res://shaders/sdf_test_shader.gdshader" id="6_07a3n"]
[ext_resource type="Shader" uid="uid://ditx2cnytp3be" path="res://shaders/draw_With_SDF_shader.gdshader" id="7_1y5ni"]
[ext_resource type="Shader" uid="uid://dc3lncj52arvj" path="res://shaders/draw_segment_sdf.gdshader" id="7_748q6"]
[ext_resource type="Shader" uid="uid://buirkvg4ggf1h" path="res://shaders/pingPong/mouse_pingPong_shader.gdshader" id="8_47mj3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_u0iwh"]
shader = ExtResource("2_lbbxc")
shader_parameter/virtual_resolution = Vector2(512, 512)

[sub_resource type="QuadMesh" id="QuadMesh_ta4a1"]
size = Vector2(512, 512)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gn17g"]
shader = ExtResource("3_cxnwi")
shader_parameter/virtual_resolution = Vector2(512, 512)

[sub_resource type="QuadMesh" id="QuadMesh_748q6"]
size = Vector2(1024, 1024)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lbbxc"]
shader = ExtResource("2_ta4a1")
shader_parameter/virtual_resolution = Vector2(512, 512)

[sub_resource type="QuadMesh" id="QuadMesh_lbbxc"]
size = Vector2(512, 512)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gqu34"]
shader = ExtResource("4_u0iwh")
shader_parameter/virtual_resolution = Vector2(512, 512)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_07a3n"]
shader = ExtResource("5_gqu34")
shader_parameter/virtual_resolution = Vector2(512, 512)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1y5ni"]
shader = ExtResource("6_07a3n")
shader_parameter/virtual_resolution = Vector2(512, 512)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cxnwi"]
shader = ExtResource("7_748q6")
shader_parameter/arrayLargestIndex = 0
shader_parameter/currentClickPosition = Vector2(0, 0)
shader_parameter/currentMousePosition = Vector2(0, 0)
shader_parameter/isMouseHeld = 0
shader_parameter/segmentThickness = 0.0
shader_parameter/currentSelectedColor = Vector4(0, 0, 0, 0)
shader_parameter/virtual_resolution = Vector2(512, 512)

[sub_resource type="QuadMesh" id="QuadMesh_ig1kv"]
size = Vector2(512, 512)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ig1kv"]
shader = ExtResource("4_u0iwh")
shader_parameter/virtual_resolution = Vector2(512, 512)

[sub_resource type="QuadMesh" id="QuadMesh_gn17g"]
size = Vector2(1024, 1024)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_47mj3"]
shader = ExtResource("7_1y5ni")
shader_parameter/virtual_resolution = Vector2(512, 512)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_748q6"]
shader = ExtResource("8_47mj3")
shader_parameter/mousePos = Vector2(0, 0)
shader_parameter/mouseClick = 0
shader_parameter/viewport_size = Vector2(0, 0)

[node name="Node2D_main" type="Node2D"]
script = ExtResource("1_ta4a1")

[node name="MeshInstance2D_512" type="MeshInstance2D" parent="."]
material = SubResource("ShaderMaterial_u0iwh")
position = Vector2(256, 256)
mesh = SubResource("QuadMesh_ta4a1")

[node name="MeshInstance2D_1024" type="MeshInstance2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_gn17g")
position = Vector2(512, 512)
mesh = SubResource("QuadMesh_748q6")

[node name="SubViewport_1" type="SubViewport" parent="."]
disable_3d = true
handle_input_locally = false
render_target_update_mode = 4

[node name="MeshInstance2D" type="MeshInstance2D" parent="SubViewport_1"]
material = SubResource("ShaderMaterial_lbbxc")
position = Vector2(256, 256)
mesh = SubResource("QuadMesh_lbbxc")

[node name="SubViewport_2" type="SubViewport" parent="."]
disable_3d = true
handle_input_locally = false
render_target_update_mode = 4

[node name="MeshInstance2D" type="MeshInstance2D" parent="SubViewport_2"]
material = SubResource("ShaderMaterial_gqu34")
position = Vector2(256, 256)
mesh = SubResource("QuadMesh_lbbxc")

[node name="SubViewport_3" type="SubViewport" parent="."]
disable_3d = true
handle_input_locally = false
render_target_update_mode = 4

[node name="MeshInstance2D" type="MeshInstance2D" parent="SubViewport_3"]
material = SubResource("ShaderMaterial_07a3n")
position = Vector2(256, 256)
mesh = SubResource("QuadMesh_lbbxc")

[node name="SubViewport_4" type="SubViewport" parent="."]
disable_3d = true

[node name="MeshInstance2D" type="MeshInstance2D" parent="SubViewport_4"]
material = SubResource("ShaderMaterial_1y5ni")
position = Vector2(256, 256)
mesh = SubResource("QuadMesh_lbbxc")

[node name="SubViewport_5" type="SubViewport" parent="."]
disable_3d = true

[node name="MeshInstance2D" type="MeshInstance2D" parent="SubViewport_5"]
material = SubResource("ShaderMaterial_cxnwi")
position = Vector2(256, 256)
mesh = SubResource("QuadMesh_ig1kv")

[node name="SubViewport_CL_4" type="SubViewport" parent="."]
disable_3d = true
size = Vector2i(1024, 1024)

[node name="MeshInstance2D" type="MeshInstance2D" parent="SubViewport_CL_4"]
material = SubResource("ShaderMaterial_ig1kv")
mesh = SubResource("QuadMesh_gn17g")

[node name="Camera2D" type="Camera2D" parent="SubViewport_CL_4"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchor_left = 0.020000001
anchor_top = 0.020000001
anchor_right = 0.38300002
anchor_bottom = 0.44700003
offset_left = -0.24000072
offset_top = -0.24000072
offset_right = -0.0960083
offset_bottom = 0.13598633

[node name="OptionButton" type="OptionButton" parent="CanvasLayer/Control"]
layout_mode = 0
offset_right = 160.0
offset_bottom = 32.0
selected = 5
item_count = 7
popup/item_0/text = "Test Shader"
popup/item_0/id = 0
popup/item_1/text = "Circle RT"
popup/item_1/id = 1
popup/item_2/text = "Grid Display"
popup/item_2/id = 2
popup/item_3/text = "SDF"
popup/item_3/id = 3
popup/item_4/text = "Drawing with SDFs"
popup/item_4/id = 4
popup/item_5/text = "Drawing Segments"
popup/item_5/id = 5
popup/item_6/text = "Cascade Lvl 5"
popup/item_6/id = 6

[node name="ColorPickerButton" type="ColorPickerButton" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 199.0
offset_top = 2.0
offset_right = 240.0
offset_bottom = 36.0

[node name="HSlider" type="HSlider" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 268.0
offset_top = 2.0
offset_right = 385.0
offset_bottom = 39.0
min_value = 1.0
max_value = 20.0
step = 0.1
value = 1.0

[node name="Panel2" type="Panel" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 404.0
offset_top = 4.0
offset_right = 472.0
offset_bottom = 39.0

[node name="Label_thickness" type="Label" parent="CanvasLayer/Control/Panel2"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1.0
offset_top = 6.0
offset_right = 66.0
offset_bottom = 30.0
text = "1.0"
horizontal_alignment = 1

[node name="SubViewport_mouseClicks" type="SubViewport" parent="."]

[node name="MeshInstance2D" type="MeshInstance2D" parent="SubViewport_mouseClicks"]
material = SubResource("ShaderMaterial_47mj3")
position = Vector2(256, 256)
mesh = SubResource("QuadMesh_lbbxc")

[node name="PingPongRoot" type="Node2D" parent="."]

[node name="SubViewport_A" type="SubViewport" parent="PingPongRoot"]
render_target_update_mode = 0

[node name="MeshInstance2D_A" type="MeshInstance2D" parent="PingPongRoot/SubViewport_A"]
material = SubResource("ShaderMaterial_748q6")
position = Vector2(256, 256)
mesh = SubResource("QuadMesh_lbbxc")

[node name="SubViewport_B" type="SubViewport" parent="PingPongRoot"]
render_target_update_mode = 0

[node name="MeshInstance2D_B" type="MeshInstance2D" parent="PingPongRoot/SubViewport_B"]
material = SubResource("ShaderMaterial_748q6")
position = Vector2(256, 256)
mesh = SubResource("QuadMesh_lbbxc")

[connection signal="item_selected" from="CanvasLayer/Control/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="color_changed" from="CanvasLayer/Control/ColorPickerButton" to="." method="_on_color_picker_button_color_changed"]
[connection signal="value_changed" from="CanvasLayer/Control/HSlider" to="." method="_on_h_slider_segment_thickness_value_changed"]
